# zydiff

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
src/core/: analyzer.cpp  analyzer.h  decoder.cpp  decoder.h  differ.cpp  differ.h  parser.cpp  parser.h  serializer.cpp  serializer.hpp
src/core/headers/: elf.h  elf_header.h  pe.h  pe_header.h
src/util/: logger.h
